--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -5,6 +5,13 @@ ARG REINSTALL_CMAKE_VERSION_FROM_SOURCE="none"
 # Optionally install the cmake for vcpkg
 COPY ./reinstall-cmake.sh /tmp/
 
+RUN cd /opt/ && \
+    git clone --branch 3.4 --depth 1 https://gitlab.com/libeigen/eigen.git && \
+    mkdir -p eigen/build_dir && \
+    cd eigen/build_dir && \
+    cmake .. && \
+    sudo make install
+
 RUN if [ "${REINSTALL_CMAKE_VERSION_FROM_SOURCE}" != "none" ]; then \
         chmod +x /tmp/reinstall-cmake.sh && /tmp/reinstall-cmake.sh ${REINSTALL_CMAKE_VERSION_FROM_SOURCE}; \
     fi \
