Made octreenode fully C++ complient (Eigen) and oaktree nanobind does the binding. Still need to figure out how to return ndarray with correct shape

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -5,6 +5,8 @@ ARG REINSTALL_CMAKE_VERSION_FROM_SOURCE="none"
 # Optionally install the cmake for vcpkg
 COPY ./reinstall-cmake.sh /tmp/
 
+RUN sudo apt install libpython3-dev
+
 RUN cd /opt/ && \
     git clone --branch 3.4 --depth 1 https://gitlab.com/libeigen/eigen.git && \
     mkdir -p eigen/build_dir && \
