--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -11,10 +11,7 @@
     "customizations": {
         // Configure properties specific to VS Code.
         "vscode": {
-            "settings": {},
-            "extensions": [
-                "streetsidesoftware.code-spell-checker"
-            ]
+            "settings": {}
         }
     }
     // Use 'forwardPorts' to make a list of ports inside the container available locally.
