Changed Eigen submodule URL to use HTTPS, so repo is easy to clone without SSH keys

--- a/.gitmodules
+++ b/.gitmodules
@@ -6,4 +6,4 @@
 	url = https://github.com/USCiLab/cereal.git
 [submodule "external/eigen"]
 	path = external/eigen
-	url = git@gitlab.com:libeigen/eigen.git
+	url = https://gitlab.com/libeigen/eigen.git
