--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ description = "Render large point clouds fast using Octrees in Python"
 readme = "README.md"
 requires-python = ">=3.8"
 authors = [
-    { name = "Eduardo Arnold", email = "https://github.com/eduardohenriquearnold" },
+    { name = "Eduardo Arnold", email = "4097245+eduardohenriquearnold@users.noreply.github.com" },
 ]
 classifiers = [
     "License :: MIT",
